// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SunoDashboard changing language from language selector should update stats 1`] = `
<DocumentFragment>
  <div>
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div>
          <div>
            <label
              class="form-label"
              for="language"
            >
              selectLanguagePrompt:
            </label>
            <select
              aria-label="Select Language"
              class="form-select"
              id="language"
            >
              <option
                value="all"
              >
                allLanguages
              </option>
              <option
                value="English"
              >
                English
              </option>
              <option
                value="Hindi"
              >
                हिंदी
              </option>
              <option
                value="Tamil"
              >
                தமிழ்
              </option>
              <option
                value="Telugu"
              >
                తెలుగు
              </option>
              <option
                value="Assamese"
              >
                অসমীয়া
              </option>
              <option
                value="Bengali"
              >
                বাংলা
              </option>
              <option
                value="Gujarati"
              >
                ગુજરાતી
              </option>
              <option
                value="Kannada"
              >
                ಕನ್ನಡ
              </option>
              <option
                value="Malayalam"
              >
                മലയാളം
              </option>
              <option
                value="Marathi"
              >
                मराठी
              </option>
              <option
                value="Odia"
              >
                ଓଡିଆ
              </option>
              <option
                value="Punjabi"
              >
                ਪੰਜਾਬੀ
              </option>
            </select>
          </div>
        </div>
      </div>
    </div>
    DataLastUpdated
    <div>
      <div
        class="mt-4 mt-md-5"
      >
        <div
          class="root rounded-20 bg-info px-7 px-md-0 py-md-7"
        >
          <div
            class="m-md-0 row"
            data-testid="StatsRow"
          >
            <div
              class="stat col-md-4 col-12"
            >
              <div
                class="d-flex flex-column align-items-center py-7 py-md-0"
              >
                <span
                  class="count text-warning display-1"
                >
                  9
                </span>
                <span
                  class="text-light mt-1 display-3 text-center"
                >
                  peopleParticipated
                </span>
              </div>
            </div>
            <div
              class="stat col-md-4 col-12"
            >
              <div
                class="d-flex flex-column align-items-center py-7 py-md-0"
              >
                <span
                  class="count text-warning display-1"
                >
                  3 minutes
                </span>
                <span
                  class="text-light mt-1 display-3 text-center"
                >
                  durationTranscribed
                </span>
              </div>
            </div>
            <div
              class="stat col-md-4 col-12"
            >
              <div
                class="d-flex flex-column align-items-center py-7 py-md-0"
              >
                <span
                  class="count text-warning display-1"
                >
                  4 seconds
                </span>
                <span
                  class="text-light mt-1 display-3 text-center"
                >
                  durationValidated
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pt-7 pt-md-9 container-lg"
    >
      <h3>
        mapChartTitle
      </h3>
      MapChart
    </div>
    <div
      class="pt-7 pt-md-9 container-lg"
    >
      <h3>
        lineChartTitle
      </h3>
      <div
        class="row"
      >
        <button
          class="info primary btn btn-primary"
          data-testid="Button"
          type="button"
        >
          monthly
        </button>
        <button
          class="info primary btn btn-primary"
          data-testid="Button"
          type="button"
        >
          quarterly
        </button>
      </div>
      LineChart
    </div>
  </div>
</DocumentFragment>
`;

exports[`SunoDashboard should render snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div>
          <div>
            <label
              class="form-label"
              for="language"
            >
              selectLanguagePrompt:
            </label>
            <select
              aria-label="Select Language"
              class="form-select"
              id="language"
            >
              <option
                value="all"
              >
                allLanguages
              </option>
              <option
                value="English"
              >
                English
              </option>
              <option
                value="Hindi"
              >
                हिंदी
              </option>
              <option
                value="Tamil"
              >
                தமிழ்
              </option>
              <option
                value="Telugu"
              >
                తెలుగు
              </option>
              <option
                value="Assamese"
              >
                অসমীয়া
              </option>
              <option
                value="Bengali"
              >
                বাংলা
              </option>
              <option
                value="Gujarati"
              >
                ગુજરાતી
              </option>
              <option
                value="Kannada"
              >
                ಕನ್ನಡ
              </option>
              <option
                value="Malayalam"
              >
                മലയാളം
              </option>
              <option
                value="Marathi"
              >
                मराठी
              </option>
              <option
                value="Odia"
              >
                ଓଡିଆ
              </option>
              <option
                value="Punjabi"
              >
                ਪੰਜਾਬੀ
              </option>
            </select>
          </div>
        </div>
      </div>
    </div>
    DataLastUpdated
    <div
      data-testid="ContributionStats"
    >
      <header
        class="d-flex flex-column"
      />
      <div
        class="mt-4 mt-md-5"
      >
        <div
          class="root rounded-20 bg-info px-7 px-md-0 py-md-7"
        >
          <div
            class="m-md-0 row"
            data-testid="StatsRow"
          >
            <div
              class="stat col-md-3 col-12"
            >
              <div
                class="d-flex flex-column align-items-center py-7 py-md-0"
              >
                <span
                  class="count text-warning display-1"
                >
                  2
                </span>
                <span
                  class="text-light mt-1 display-3 text-center"
                >
                  languages
                </span>
              </div>
            </div>
            <div
              class="stat col-md-3 col-12"
            >
              <div
                class="d-flex flex-column align-items-center py-7 py-md-0"
              >
                <span
                  class="count text-warning display-1"
                >
                  9
                </span>
                <span
                  class="text-light mt-1 display-3 text-center"
                >
                  peopleParticipated
                </span>
              </div>
            </div>
            <div
              class="stat col-md-3 col-12"
            >
              <div
                class="d-flex flex-column align-items-center py-7 py-md-0"
              >
                <span
                  class="count text-warning display-1"
                >
                  3 minutes
                </span>
                <span
                  class="text-light mt-1 display-3 text-center"
                >
                  durationTranscribed
                </span>
              </div>
            </div>
            <div
              class="stat col-md-3 col-12"
            >
              <div
                class="d-flex flex-column align-items-center py-7 py-md-0"
              >
                <span
                  class="count text-warning display-1"
                >
                  4 seconds
                </span>
                <span
                  class="text-light mt-1 display-3 text-center"
                >
                  durationValidated
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pt-7 pt-md-9 container-lg"
    >
      <h3>
        mapChartTitle
      </h3>
      MapChart
    </div>
    <div
      class="pt-7 pt-md-9 container-lg"
    >
      <h3>
        lineChartTitle
      </h3>
      <div
        class="row"
      >
        <button
          class="info primary btn btn-primary"
          data-testid="Button"
          type="button"
        >
          monthly
        </button>
        <button
          class="info primary btn btn-primary"
          data-testid="Button"
          type="button"
        >
          quarterly
        </button>
      </div>
      LineChart
    </div>
  </div>
</DocumentFragment>
`;
